add publish not ready headless service to jobset
